--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+nav {
+  background-color: #eee;
+  padding: 32px 16px;
+
+}
+
+nav a {
+  margin: 10px;
+}
+/* nav a.active{
+text-decoration: none;
+color: red;
+} */
